use cmd line arg that works with older jdks